Updated meta data.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Currently, I’m a P.h.D student in the department of Biosciences and Bioengineering at Indian Institute of Technology Guwahati. I am working under the supervision of Dr. Nitin Chaudhary and Dr. Vibin Ramakrishnan. My research focuses on the design and synthesis of peptide based functional nano-structures.">
+    <meta name="author" content="Debika Datta">
 
     <title>debika_datta</title>
 
