--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@ December 2014, held at IIT Bombay</li>
        <i class="fa-li fa fa-check"></i>
         <li>American Peptide Society
 		</li>
+		<li>European Peptide Society
+		</li>
 		<li>Indian Biophysical Society
 		</li>
 		<li>Society of Biological Chemists, India
