--- a/index.html
+++ b/index.html
@@ -192,7 +192,11 @@ Ramakrishnan. My research focuses on the design and synthesis of peptide based f
           <h2 class="mb-5">Publications</h2>
        <li><div>Debika Datta, Adicherla Harikrishna,  Ramakrishnan Nagaraj, and Nitin Chaudhary. <b>Self-assembly of β-turn motif-connected tandem repeats of Aβ16–22 and its aromatic analogs.</b> <em>Peptide Science</em>, 2018, e24099. <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/pep2.24099">DOI:10.1002/pep2.24099</a></li>
  <li><div>Debika Datta, , Vishnu Kumar, Sachin Kumar, Ramakrishnan Nagaraj, and Nitin Chaudhary. <b>Hydrogel Formation by an Aromatic Analogue of a β-Amyloid Fragment, Aβ16–22: A Scaffold for 3D Cell Culture.</b> <em>ACS Omega</em>, 2019, 4(1): p. 620-627. <a href="https://pubs.acs.org/doi/10.1021/acsomega.8b02771">DOI:10.1021/acsomega.8b02771</a></li>
-        </div>
+<li><div>Debika Datta, , Vishnu Kumar, Sachin Kumar, Ramakrishnan Nagaraj, and Nitin Chaudhary. <b>Limpid hydrogels from β-turn motif-connected tandem repeats of Aβ 16-22</b> <em>Soft matter</em>, 2019, 15: p. 4827-4835. <a href="https://pubs.rsc.org/en/content/articlelanding/2019/sm/c9sm00343f#!divAbstract">DOI:10.1039/C9SM00343F</a></li>
+<li><div>Anusua Dhara, Md Saddam Hussain, Debika Datta, and Manish Kumar. <b>Insights to the Assembly of a Functionally Active Leptospiral ClpP1P2 Protease Complex along with Its ATPase Chaperone ClpX</b> <em>ACS Omega</em>, 2019, 4(7): p. 12880-12895. <a href="https://pubs.acs.org/doi/abs/10.1021/acsomega.9b00399">DOI:10.1021/acsomega.9b00399</a></li>
+      
+	     
+	      </div>
         </ul>
       </section>
 
