--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ December 2014, held at IIT Bombay</li>
        <i class="fa-li fa fa-check"></i>
         <ul>
 			
-				<li>Curriculum Vitae <a href="files/debika_cv.pdf">[PDF]</a></li>
+				<li>Curriculum Vitae <a href="files/Debika Datta_cv.pdf">[PDF]</a></li>
 				 
 			</ul>
       </section>
