--- a/index.html
+++ b/index.html
@@ -217,8 +217,14 @@ Pune</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               
-              Awarded with First Prize in the Poster Presentation at 6th Annual Meeting of Proteomics Society India,
+              Awarded with Best Poster Prize in the Poster Presentation at 6th Annual Meeting of Proteomics Society India,
 December 2014, held at IIT Bombay</li>
+		   <i class="fa-li fa fa-trophy text-warning"></i>
+              Received International Travel Support from Department of Science and Technology (DST), India to attend the 26th American Peptide Symposium and 11th International Peptide Symposium held in Monterey, California, USA, 2019</li>
+            <li>
+		     <i class="fa-li fa fa-trophy text-warning"></i>
+              Received travel award from American Peptide Symposium to attend the 26th American Peptide Symposium and 11th International Peptide Symposium held in Monterey, California, USA, 2019</li>
+            <li>
           </ul>
         </div>
       </section>
