--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@ Pune</li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               
               Awarded with Best Poster Prize in the Poster Presentation at 6th Annual Meeting of Proteomics Society India,
-December 2014, held at IIT Bombay</li>
-		  </li>
+December 2014, held at IIT Bombay<li>
+		  <li>
 		<i class="fa-li fa fa-trophy text-warning"></i>
               Received travel award from American Peptide Symposium to attend the 26th American Peptide Symposium and 11th International Peptide Symposium held in Monterey, California, USA, 2019</li>
             <li>
