--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@ Ramakrishnan. My research focuses on the design and synthesis of peptide based f
             </a>
             <a href="https://www.facebook.com/debika08">
               <i class="fab fa-facebook-f"></i>
+		    <a href="https://www.linkedin.com/in/debikadatta789/">
+              <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
         </div>
