--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 		  <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#cv">Curriculum Vitae</a>
           </li>
+		<li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#cv">My Blog</a>
+          </li>
         </ul>
       </div>
     </nav>
