--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a class="nav-link js-scroll-trigger" href="#cv">Curriculum Vitae</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#cv">My Blog</a>
+            <a class="nav-link js-scroll-trigger" href="#cv"> <a href="https://debikadatta.github.io/debika-blog/">My Blog</a></a>
           </li>
         </ul>
       </div>
