--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ December 2014, held at IIT Bombay<li>
 			</ul>
       </section>
 		        </section>
-	  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="cv">
+	  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="blog">
         <div class="my-auto">
           <h2 class="mb-5">My Blog</h2>
        <i class="fa-li fa fa-check"></i>
