--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a class="nav-link js-scroll-trigger" href="#cv">Curriculum Vitae</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#cv">My Blog</a>
+            <a class="nav-link js-scroll-trigger" href="#blog">My Blog</a>
           </li>
         </ul>
       </div>
@@ -261,11 +261,11 @@ December 2014, held at IIT Bombay<li>
 		        </section>
 	  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="blog">
         <div class="my-auto">
-          <h2 class="mb-5">My Blog</h2>
+          <h2 class="mb-5">Hi</h2>
        <i class="fa-li fa fa-check"></i>
         <ul>
 			
-				<a href="https://debikadatta.github.io/debika-blog/">[Click here to read my blogs..:)]</a></li>
+				<a href="https://debikadatta.github.io/debika-blog/">Click here to read my blogs... :)</a></li>
 				 
 			</ul>
       </section>
