--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ December 2014, held at IIT Bombay<li>
 		        </section>
 	  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="blog">
         <div class="my-auto">
-          <h2 class="mb-5">Hi</h2>
+          Hey
        <i class="fa-li fa fa-check"></i>
         <ul>
 			
