--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
   <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154611177-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154611177-1');
+</script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -200,7 +209,8 @@ Ramakrishnan. My research focuses on the design and synthesis of peptide based f
 <li><div>Debika Datta, , Vishnu Kumar, Sachin Kumar, Ramakrishnan Nagaraj, and Nitin Chaudhary. <b>Limpid hydrogels from β-turn motif-connected tandem repeats of Aβ 16-22</b> <em>Soft Matter</em>, 2019, 15: p. 4827-4835. <a href="https://pubs.rsc.org/en/content/articlelanding/2019/sm/c9sm00343f#!divAbstract">DOI:10.1039/C9SM00343F</a></li>
 <li><div>Anusua Dhara, Md Saddam Hussain, Debika Datta, and Manish Kumar. <b>Insights to the Assembly of a Functionally Active Leptospiral ClpP1P2 Protease Complex along with Its ATPase Chaperone ClpX</b> <em>ACS Omega</em>, 2019, 4(7): p. 12880-12895. <a href="https://pubs.acs.org/doi/abs/10.1021/acsomega.9b00399">DOI:10.1021/acsomega.9b00399</a></li>
  <li><div>Karabi Saikia, Vinay Kumar Belwal, Debika Datta, and Nitin Chaudhary. <b> Aromatic-rich C-terminal region of LCI is a potent antimicrobial peptide in itself.</b> <em> Biochemical and Biophysical Research Communications</em>, 2019, 519(2): p. 372-377. <a href="https://europepmc.org/article/med/31519325">DOI:10.1016/j.bbrc.2019.09.013</a></li>
- 
+  <li><div>Debika Datta, Ramakrishnan Nagaraj, and Nitin Chaudhary. <b> Water-alcohol bigels from fatty-acylated dipeptides.</b> <em>The Journal of Physical Chemistry B</em> 2019. <a href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.9b10002">DOI:10.1021/acs.jpcb.9b10002</a></li>
+
 	     
 	      </div>
         </ul>
