--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ December 2014, held at IIT Bombay<li>
        <i class="fa-li fa fa-check"></i>
         <ul>
 			
-				<a href="https://ebikadatta.github.io/debika-blog/">Click here to read my blogs... :)</a></li>
+				<a href="https://debikadatta.github.io/debika-blog/">Click here to read my blogs... :)</a></li>
 				 
 			</ul>
       </section>
