--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Currently, I’m a P.h.D student in the department of Biosciences and Bioengineering at Indian Institute of Technology Guwahati. I am working under the supervision of Dr. Nitin Chaudhary and Dr. Vibin Ramakrishnan. My research focuses on the design and synthesis of peptide based functional nano-structures.">
+    <meta name="description" content="Dr. Debika Datta is a postdoctoral researcher at University of California San Diego. Her current research focuses on fabricating biosynthetic materials by integrating genetically engineered cells into polymer composites ">
     <meta name="author" content="Debika Datta">
 
     <title>debika_datta</title>
@@ -87,9 +87,8 @@
           <div class="subheading mb-5">Department of Biosciences and Bioengineering, IIT Guwahati ·
             <a href="mailto:name@email.com">debika@iitg.ac.in</a>
           </div>
-          <p class="lead mb-5"><p style="text-align:justify">Currently, I’m a P.h.D student in the department of Biosciences and Bioengineering at Indian Institute
-of Technology Guwahati. I am working under the supervision of Dr. Nitin Chaudhary and Dr. Vibin
-Ramakrishnan. My research focuses on the design and synthesis of peptide based functional nano-structures.</p>
+         <p class="lead mb-5"><p style="text-align:justify"> I am a postdoctoral researcher in the lab of <a href=" https://www.pokorskilab.com/team"> Professor Jon Pokorski</a></li> and am serving as MRSEC Trainee Leadership Group Representative (IRG2). My current research focuses on fabricating biosynthetic materials by integrating genetically engineered cells into polymer composites.</p>
+<p class="lead mb-5"><p style="text-align:justify Prior to joining the Pokorski lab, I received my Doctoral degree from the Indian Institute of Technology Guwahati, India. During my PhD research I developed biocompatible gelators from short self-assembling peptides for applications in drug delivery and tissue engineering. In my spare time I enjoys photography, traveling, writing and painting.</p>
           <div class="social-icons">
             <a href="https://www.researchgate.net/profile/Debika_Datta">
               <i class="fab fa-researchgate"></i>
