--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="subheading mb-5">Department of Nanoengineering, University of California San Diego ·
             <a href="mailto:name@email.com">ddatta@eng.ucsd.edu</a>
           </div>
-         <p class="lead mb-5"><p style="text-align:justify"> I am a postdoctoral researcher in the lab of <a href=" https://www.pokorskilab.com/team"> Professor Jon Pokorski</a></li> and am serving as MRSEC Trainee Leadership Group Representative (IRG2). My current research focuses on fabricating biosynthetic materials by integrating genetically engineered cells into polymer composites.</p>
+         <p class="lead mb-5"><p style="text-align:justify"> I am a postdoctoral researcher in the lab of <a href="https://www.pokorskilab.com/team"> Professor Jon Pokorski</a></li> and am serving as <a href="https://mrsec.ucsd.edu/"> MRSEC</a></li> Trainee Leadership Group Representative (IRG2). My current research focuses on fabricating biosynthetic materials by integrating genetically engineered cells into polymer composites.</p>
 <p class="lead mb-5"><p style="text-align:justify"> Prior to joining the Pokorski lab, I received my Doctoral degree from the Indian Institute of Technology Guwahati, India. During my PhD research I developed biocompatible gelators from short self-assembling peptides for applications in drug delivery and tissue engineering. In my spare time I enjoys photography, traveling, writing and painting.</p>
           <div class="social-icons">
             <a href="https://www.researchgate.net/profile/Debika_Datta">
